@@ -46,8 +46,9 @@ Working version
   to the implementation and the coercion.
   (Leandro Ostera, review by Gabriel Scherer and Thomas Refis)
 
-* #10061: remove modules `Opttoploop`, `Opttopstart`, which are replaced by
-  `Toploop` and `Topstart`, made available in native code.
+* #10061, #10078: remove library `ocamlopttoplevel`, remove modules
+  `Opttoploop`, `Opttopstart`, which are replaced by `Toploop` and `Topstart` in
+  library `ocamltoplevel`, made available in native code.
 
 ### Build system:
 
